--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vehicle-management-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -28,7 +28,6 @@
     "react-chartjs-2": "^5.2.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4",
-    "oracledb": "^5.1.0"
+    "nodemon": "^3.1.4"
   }
 }
